2008-02-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/iso.*: Added a new marching cubes function
	that does not use interpolation. This should significantly reduce the
	resources needed to calculated many surfaces.

	* libavogadro/src/engines/surfaceengine.cpp: Ported to use the new
	IsoGen class without interpolation - we calculate the VdW surface and
	so should never need to interpolate values.

	* libavogadro/src/engines/orbitalengine.cpp: Ported to continue
	interpolating for now. This engine should have optional interpolation
	but I need to hunt down a bug in the code first.

2008-02-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/surfaceengine.cpp: Update the surface engine
	to use the new features of the GridData class - requires fresh OB SVN.

2008-02-21  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Fixed up some of the makeCurrent and
	doneCurrent calls - should hopefully increase stability although I
	think threaded GL still needs some love (as well as my ATI driver!)

	* libavogadro/src/tools/manipulatetool.cpp,
	libavogadro/src/tools/navigatetool.cpp: Provide more visual cues by
	changing the mouse cursor.

2008-02-21  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalsettingswidget.ui,
	libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/engines/surfacesettingswidget.ui: Removed the paddings
	and set step size spinners. Also removed the corresponding functions
	that set these properties.

	* libavogadro/src/engines/orbitalengine.cpp,
	libavogadro/src/engines/surfaceengine.cpp: Fixed the opacity slider
	to actually change the surface opacity. Ported to the new init
	function in IsoGen

	* libavogadro/src/engines/iso.*: Modified the IsoGen init function to
	take a PainterDevice and set the step size based up on the quality.

	* libavogadro/src/painter.h, libavogadro/src/glpainter.h,