@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>341</width>
-    <height>167</height>
+    <height>169</height>
    </rect>
   </property>
   <layout class="QGridLayout" >
@@ -78,13 +78,33 @@
     </widget>
    </item>
    <item row="2" column="0" >
+    <widget class="QLabel" name="paddingLabel_2" >
+     <property name="text" >
+      <string>Interpolate:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" >
+    <widget class="QCheckBox" name="interpolate" >
+     <property name="text" >
+      <string/>
+     </property>
+     <property name="checked" >
+      <bool>false</bool>
+     </property>
+     <property name="tristate" >
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" >
     <widget class="QLabel" name="paddingLabel" >
      <property name="text" >
       <string>IsoValue:</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1" >
+   <item row="3" column="1" >
     <widget class="QDoubleSpinBox" name="isoSpin" >
      <property name="decimals" >
       <number>5</number>
@@ -103,14 +123,14 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" >
+   <item row="4" column="0" >
     <widget class="QLabel" name="colorLabel" >
      <property name="text" >
       <string>Color:</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1" >
+   <item row="4" column="1" >
     <layout class="QHBoxLayout" >
      <item>
       <widget class="QLabel" name="colorLabel_2" >
@@ -173,7 +193,7 @@
      </item>
     </layout>
    </item>
-   <item row="4" column="0" colspan="2" >
+   <item row="5" column="0" colspan="2" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
